# rustberg

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  delete_hms_db  download_hms  start_hms
python/: download_iceberg_jar.py  pyspark_nb.ipynb  requirements.txt  warehouse.py
resources/test/: manifest_list_v1.avro  manifest_list_v2.avro
src/: lib.rs  main.rs
src/hms/: fb303.rs  hms_api.rs  hms_api.thrift  mod.rs
src/iceberg/: mod.rs
src/iceberg/catalog/: mod.rs
src/iceberg/spec/: manifest_list.rs  manifest_list_avro_schema.rs  mod.rs  partition_spec.rs  schema.rs  snapshot.rs  sort_orders.rs  table_metadata.rs
