[package]
name = "rustberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.16.0"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0"
regex = "1.6.0"
lazy_static = "1.4.0"
uuid = {version = "1.1.2", features=["serde"]}
